'''
    A module to demonstrate pybind extension returning RuntimeError instead of StatusNotOk exception.
'''
module(
    name = "pybind_runtime_error",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_python", version = "1.1.0")
bazel_dep(name = "platforms", version = "0.0.10")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")

bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "pybind11_abseil", version = "202402.0")
bazel_dep(name = "abseil-cpp", version = "20240722.0", repo_name = "com_google_absl")
